--- a/storage/storageadmin/templates/storageadmin/display_group.html
+++ b/storage/storageadmin/templates/storageadmin/display_group.html
@@ -24,7 +24,7 @@
 <table id=""{{ group_name }}"" class="table table-bordered table-striped" width="50%">
 	<thead class="thead-inverse">
 		<tr>
-				<th>Username</th><th>First Name</th><th>Last Name</th><th>Home Quota (GB)</th><th>Lustre Quota (GB)</th>
+				<th>Username</th><th>First Name</th><th>Last Name</th><th>Home Usage / Quota (GB)</th><th>Lustre Usage / Quota (GB)</th><th>Galaxy Usage / Quota (GB)</th>
 		</tr>
 	</thead>
 	{% for group_user in group_users %}
